--- a/src/App.css
+++ b/src/App.css
@@ -138,7 +138,7 @@
   }
 
   .buttons {
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
     align-items: center;
     gap: 15px;
